--- a/SpringOpenCV/src/main/resources/application.properties
+++ b/SpringOpenCV/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 server.port=5000
 spring.thymeleaf.prefix=classpath:/templates/
+
+spring.servlet.multipart.max-file-size = 15MB
+spring.servlet.multipart.max-request-size = 15MB
